# gnmanager

./: .gitignore  .replit  20260124_AUDIT.md  ARCHITECTURE.md  AUDIT.md  AUDIT_WEBHOOKS.md  DEPLOIEMENT.md  GOOGLE_APPS_SCRIPT.js  GOOGLE_CREDENTIALS.md  GUIDE_UTILISATEUR.md  MIGRATION.md  MONITORING.md  PROJECT_RULES.md  README.md  SECRETKEY_FIX.md  add_csrf_tokens.py  app.py  auth.py  backfill_secrets.py  constants.py  create_blueprints.py  create_seed_prod.py  decorators.py  deploy.py  error_handler.py  exceptions.py  extensions.py  fix_sequences.py  fresh_deploy.py  generate_csvs.py  gnole.service  gnole_dev.service  gnole_test.service  import_csvs.py  logging_config.py  main.py  manage_db.py  migrate_to_v0_11.py  models.py  pyproject.toml  (+14 more)
config/: backup.json  db_test_account_validation_tokens.csv  db_test_activity_logs.csv  db_test_casting_assignments.csv  db_test_casting_proposals.csv  db_test_events.csv  db_test_participants.csv  db_test_password_reset_tokens.csv  db_test_roles.csv  db_test_users.csv  deploy_config.yaml  deploy_config_template.yaml  dev_data.json  merged_data.json  seed_data.json  seed_data_test.json  seed_prod_db.json
docs/: FLASK_MIGRATE.md  WEBHOOK_GFORMS.md
instance/: gnmanager.db
routes/: __init__.py  admin_routes.py  auth_routes.py  event_routes.py  event_routes.py.snippet  gforms_routes.py  health_routes.py  participant_contact_update.py  participant_routes.py  participant_routes_export_addition.py  webhook_routes.py
scripts/: add_photo_locked_column.py  add_profile_photo_column.py  add_profile_public_column.py  add_theme_images.py  (+16 more)
(+121 files in other folders)
