[project]
name = "gnmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "qrcode[pil]>=8.2",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
]
