[project]
name = "gnmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-limiter>=3.5.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.0",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "werkzeug>=3.1.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
    "authlib>=1.3.0",
    "google-api-python-client>=2.0.0",
    "scipy>=1.15.0",
    "numpy>=2.2.0",
    "markdown>=3.10.1",
    "flask-caching>=2.3.1",
    "pillow>=11.0.0",
    "odfpy>=1.4.1",
]
